Comentários adicionados ao site sobre as mudanças necessárias

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <!-- Deixar o site mais leve reduzindo os tamanhos das imagens -->
 <!-- Adição de links externos, conteúco, e imagens -->
 <!-- colocar links externos nos recursos -->
+<!-- responsividade nas imagens dos recursos para telas menores que 400 px de largura -->
 
 
 <!DOCTYPE html>
@@ -115,6 +116,8 @@
                 </a>
             </h2>
             <p>Os monitores REDMat atuaram ou atuam nos seguintes projetos de ensino do Instituto de Matemática e Estatística.</p>
+            <p class="comentario">colocar links nos itens</p>
+
             <ul>
                 <li>
                     <a href="pages/proj-ensino.html#manim">
@@ -163,6 +166,8 @@
                 </a>
             </h2>
             <p>Os monitores REDMat colaboraram na produção do seguinte material digital:</p>
+            <p class="comentario">colocar links nos itens</p>
+
             <ul>
 
                 <li>
@@ -227,16 +232,18 @@
 
 
 
+            <section class="recurso">
 
             <section id="func-uma-var">
                 <a href="pages/recursos.html#func-uma-var">
-                    <h2>Funções de Uma Variável</h2>
+                    <h3>Funções de Uma Variável</h3>
                 </a>
                 <div class="recurso-container">
                     <div>
                         <a href="pages/recursos.html#func-uma-var">
                             <img src="assets/img/func.png" alt="Funções de Uma Variável">
                         </a>
+                        <p class="comentario"> colocar aqui os textos das paginas dos recursos</p>
                         <div class="recurso-descricao">
                             <p>Nesta seção, os monitores REDMat apresentam um material digital envolvente e informativo sobre as "Funções de Uma Variável". Explore conceitos fundamentais de matemática por meio de recursos visuais dinâmicos, proporcionando uma compreensão mais acessível e prazerosa.</p>
                         </div>
@@ -247,7 +254,7 @@
 
             <section id="calc-func-uma-var">
                 <a href="pages/recursos.html#calc-func-uma-var">
-                    <h2>Cálculo de Funções de Uma Variável</h2>
+                    <h3>Cálculo de Funções de Uma Variável</h3>
                 </a>
                 <div class="recurso-container">
                     <div>
@@ -255,6 +262,8 @@
                             <img src="assets/img/calc1.png" alt="Cálculo de Funções de Uma Variável">
                         </a>
                         <div class="recurso-descricao">
+                            <p class="comentario"> colocar aqui os textos das paginas dos recursos</p>
+
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis saepe provident mollitia? Tempora mollitia id libero maxime officia quae dolores nesciunt corrupti! Molestiae, non nulla accusantium fugit dignissimos facilis laborum?</p>
                         </div>
                     </div>
@@ -264,7 +273,7 @@
 
             <section id="calc-func-varias-var">
                 <a href="pages/recursos.html#calc-func-varias-var">
-                    <h2>Cálculo de Funções de Várias Variável</h2>
+                    <h3>Cálculo de Funções de Várias Variável</h3>
                 </a>
                 <div class="recurso-container">
                     <div>
@@ -272,6 +281,8 @@
                             <img src="assets/img/calc2.png" alt="Cálculo de Funções de Várias Variável">
                         </a>
                         <div class="recurso-descricao">
+                            <p class="comentario"> colocar aqui os textos das paginas dos recursos</p>
+
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis saepe provident mollitia? Tempora mollitia id libero maxime officia quae dolores nesciunt corrupti! Molestiae, non nulla accusantium fugit dignissimos facilis laborum?</p>
                         </div>
                     </div>
@@ -281,7 +292,7 @@
 
             <section id="edo">
                 <a href="pages/recursos.html#edo">
-                    <h2>Equações Diferenciais Ordinárias</h2>
+                    <h3>Equações Diferenciais Ordinárias</h3>
                 </a>
                 <div class="recurso-container">
                     <div>
@@ -289,6 +300,8 @@
                             <img src="assets/img/edo.png" alt="Equações Diferenciais Ordinárias">
                         </a>
                         <div class="recurso-descricao">
+                            <p class="comentario"> colocar aqui os textos das paginas dos recursos</p>
+
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis saepe provident mollitia? Tempora mollitia id libero maxime officia quae dolores nesciunt corrupti! Molestiae, non nulla accusantium fugit dignissimos facilis laborum?</p>
                         </div>
                     </div>
@@ -297,6 +310,8 @@
 
 
 
+
+            </section>
 
 
 
