--- a/pages/livros-eletronicos.html
+++ b/pages/livros-eletronicos.html
@@ -1,3 +1,4 @@
+<!-- Excluir esta página e linkar o menu para a index -->
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -17,34 +18,33 @@
         
     <main>
 
+        <p class="comentario">Excluir esta página e linkar o menu para o index</p>
+
         <section class="sobre">
-            <h2>Importância dos Livros Eletrônicos</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid ipsam laudantium dolore culpa tempora? Quam quos quae magni soluta ab incidunt veniam, voluptatem hic corporis assumenda maiores atque labore consequuntur!</p>
-            <hr>
             <div class="apenas-desktop">
-                <h2>Título apenas na versão desktop</h2>
-                <p>Este texto aparece apenas na versão desktop</p>
+                <h2>Importância dos Livros Eletrônicos</h2>
+                <p class="revisar">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid ipsam laudantium dolore culpa tempora? Quam quos quae magni soluta ab incidunt veniam, voluptatem hic corporis assumenda maiores atque labore consequuntur!</p>
             </div>
         </section>
 
         <section class="content">
 
-            <h2>Livros Eletrônicos</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate cum praesentium harum nesciunt quas, atque accusamus ad quae ducimus sint corrupti tempore enim. Explicabo nam, atque eum reiciendis quas asperiores.</p>
+            <h1>Livros Eletrônicos</h1>
+            <p class="revisar">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate cum praesentium harum nesciunt quas, atque accusamus ad quae ducimus sint corrupti tempore enim. Explicabo nam, atque eum reiciendis quas asperiores.</p>
             <hr>
 
             <section id="calc-geogebra-v1">
                 <div class="recurso-container">
                     <h3>Cálculo com Geobebra 3D vol. I</h3>
-                    <h5>Monitores:</h5>
-                    <h6>Data: --/----</h6>
+                    <!-- <h5>Monitores:</h5> -->
+                    <!-- <h6>Data: --/----</h6> -->
                     <div class="recurso-descricao">
                         <div> <!-- div importante para manter o float na imagem-->
                             <a href="">
                                 <img src="../assets/img/img-padrao.bmp" alt="Cálculo com Geogebra 3D vol.I">
                             </a>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis saepe provident mollitia? Tempora mollitia id libero maxime officia quae dolores nesciunt corrupti! Molestiae, non nulla accusantium fugit dignissimos facilis laborum?</p>
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati quas accusantium, explicabo necessitatibus inventore sunt veniam vel corporis ab nam! Sint, molestias dolor impedit quidem id asperiores possimus provident aliquid. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis laborum molestiae, debitis laudantium sunt enim excepturi reprehenderit! Minus eveniet nam repellendus quibusdam. Eaque quod deserunt incidunt nisi obcaecati non molestias?</p>
+                            <p class="revisar">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis saepe provident mollitia? Tempora mollitia id libero maxime officia quae dolores nesciunt corrupti! Molestiae, non nulla accusantium fugit dignissimos facilis laborum?</p>
+                            <p class="revisar">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati quas accusantium, explicabo necessitatibus inventore sunt veniam vel corporis ab nam! Sint, molestias dolor impedit quidem id asperiores possimus provident aliquid. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis laborum molestiae, debitis laudantium sunt enim excepturi reprehenderit! Minus eveniet nam repellendus quibusdam. Eaque quod deserunt incidunt nisi obcaecati non molestias?</p>
                         </div>
                     </div>
                 </div>
@@ -55,15 +55,15 @@
                 <div class="recurso-container">
 
                     <h3>Cálculo com Geobebra 3D vol. II</h3>
-                    <h5>Monitores:</h5>
-                    <h6>Data: --/----</h6>
+                    <!-- <h5>Monitores:</h5> -->
+                    <!-- <h6>Data: --/----</h6> -->
                     <div class="recurso-descricao">
                         <div> <!-- div importante para manter o float na imagem-->
                             <a href="">
                                 <img src="../assets/img/img-padrao.bmp" alt="Cálculo com Geogebra 3D vol.II">
                             </a>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis saepe provident mollitia? Tempora mollitia id libero maxime officia quae dolores nesciunt corrupti! Molestiae, non nulla accusantium fugit dignissimos facilis laborum?</p>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae aspernatur provident omnis exercitationem ullam repellat cupiditate enim inventore dolores assumenda et praesentium, quos beatae? Alias laboriosam nostrum quidem suscipit omnis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, quae molestiae. Quidem ad sapiente expedita iusto magnam iste eligendi aperiam, optio perspiciatis repudiandae non adipisci possimus consequuntur voluptatem. Aperiam, distinctio.</p>
+                            <p class="revisar">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis saepe provident mollitia? Tempora mollitia id libero maxime officia quae dolores nesciunt corrupti! Molestiae, non nulla accusantium fugit dignissimos facilis laborum?</p>
+                            <p class="revisar">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae aspernatur provident omnis exercitationem ullam repellat cupiditate enim inventore dolores assumenda et praesentium, quos beatae? Alias laboriosam nostrum quidem suscipit omnis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, quae molestiae. Quidem ad sapiente expedita iusto magnam iste eligendi aperiam, optio perspiciatis repudiandae non adipisci possimus consequuntur voluptatem. Aperiam, distinctio.</p>
                         </div>
                     </div>
                 </div>
@@ -74,15 +74,15 @@
                 <div class="recurso-container">
 
                     <h3>Geometria Analítica com Geogebra</h3>
-                    <h5>Monitores:</h5>
-                    <h6>Data: --/----</h6>
+                    <!-- <h5>Monitores:</h5> -->
+                    <!-- <h6>Data: --/----</h6> -->
                     <div class="recurso-descricao">
                         <div> <!-- div importante para manter o float na imagem-->
                             <a href="">
                                 <img src="../assets/img/img-padrao.bmp" alt="Geometria Analítica com Geogebra">
                             </a>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis saepe provident mollitia? Tempora mollitia id libero maxime officia quae dolores nesciunt corrupti! Molestiae, non nulla accusantium fugit dignissimos facilis laborum?</p>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis iste dignissimos veritatis, ducimus modi quis accusantium asperiores minima, eos blanditiis error architecto iusto itaque assumenda cupiditate. Quibusdam harum optio repellendus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus voluptatibus veniam labore excepturi id molestiae dicta facilis, ab harum laborum eveniet accusantium doloribus consectetur, quaerat reiciendis tempora quidem exercitationem sint!</p>
+                            <p class="revisar">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis saepe provident mollitia? Tempora mollitia id libero maxime officia quae dolores nesciunt corrupti! Molestiae, non nulla accusantium fugit dignissimos facilis laborum?</p>
+                            <p class="revisar">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis iste dignissimos veritatis, ducimus modi quis accusantium asperiores minima, eos blanditiis error architecto iusto itaque assumenda cupiditate. Quibusdam harum optio repellendus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus voluptatibus veniam labore excepturi id molestiae dicta facilis, ab harum laborum eveniet accusantium doloribus consectetur, quaerat reiciendis tempora quidem exercitationem sint!</p>
                         </div>
                     </div>
                 </div>
@@ -92,15 +92,15 @@
             <section id="ap-calc-varias-var">
                 <div class="recurso-container">
                     <h3>Apostila Cálculo Diferencial de Várias Variáveis</h3>
-                    <h5>Monitores:</h5>
-                    <h6>Data: --/----</h6>
+                    <!-- <h5>Monitores:</h5> -->
+                    <!-- <h6>Data: --/----</h6> -->
                     <div class="recurso-descricao">
                         <div> <!-- div importante para manter o float na imagem-->
                             <a href="">
                                 <img src="../assets/img/img-padrao.bmp" alt="Apostila Cálculo Diferencial de Várias Variáveis">
                             </a>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis saepe provident mollitia? Tempora mollitia id libero maxime officia quae dolores nesciunt corrupti! Molestiae, non nulla accusantium fugit dignissimos facilis laborum?</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam fugiat vitae corporis tenetur officia facilis quam alias quis, esse illo itaque provident unde. Ipsum numquam assumenda, facere debitis eum facilis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis dignissimos earum corrupti harum ratione totam consequatur beatae tempore at, aperiam officia minima animi aut quos veritatis blanditiis consectetur. Blanditiis, mollitia.</p>
+                            <p class="revisar">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis saepe provident mollitia? Tempora mollitia id libero maxime officia quae dolores nesciunt corrupti! Molestiae, non nulla accusantium fugit dignissimos facilis laborum?</p>
+                            <p class="revisar">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam fugiat vitae corporis tenetur officia facilis quam alias quis, esse illo itaque provident unde. Ipsum numquam assumenda, facere debitis eum facilis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis dignissimos earum corrupti harum ratione totam consequatur beatae tempore at, aperiam officia minima animi aut quos veritatis blanditiis consectetur. Blanditiis, mollitia.</p>
                         </div>
                     </div>
                 </div>
@@ -111,15 +111,15 @@
                 <div class="recurso-container">
 
                     <h3>Site Cálculo 1A (em andamento)</h3>
-                    <h5>Monitores:</h5>
-                    <h6>Data: --/----</h6>
+                    <!-- <h5>Monitores:</h5> -->
+                    <!-- <h6>Data: --/----</h6> -->
                     <div class="recurso-descricao">
                         <div> <!-- div importante para manter o float na imagem-->
                             <a href="">
                                 <img src="../assets/img/img-padrao.bmp" alt="Site Cálculo 1A (em andamento)">
                             </a>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis saepe provident mollitia? Tempora mollitia id libero maxime officia quae dolores nesciunt corrupti! Molestiae, non nulla accusantium fugit dignissimos facilis laborum?</p>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus quidem possimus consequuntur odit tempora deleniti minima, perferendis animi ratione sint. Ullam dolorum odio soluta neque voluptatibus nesciunt modi consectetur amet! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos alias corrupti neque eaque, labore tempore ad dolore enim. Quidem officiis voluptate voluptatem tenetur velit error quis corporis optio autem neque!</p>  
+                            <p class="revisar">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis saepe provident mollitia? Tempora mollitia id libero maxime officia quae dolores nesciunt corrupti! Molestiae, non nulla accusantium fugit dignissimos facilis laborum?</p>
+                            <p class="revisar">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus quidem possimus consequuntur odit tempora deleniti minima, perferendis animi ratione sint. Ullam dolorum odio soluta neque voluptatibus nesciunt modi consectetur amet! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos alias corrupti neque eaque, labore tempore ad dolore enim. Quidem officiis voluptate voluptatem tenetur velit error quis corporis optio autem neque!</p>  
                         </div>
                     </div>
                 </div> 
@@ -130,15 +130,15 @@
                 <div class="recurso-container">
 
                     <h3>Site Cálculo 2B (em andamento)</h3>
-                    <h5>Monitores:</h5>
-                    <h6>Data: --/----</h6>
+                    <!-- <h5>Monitores:</h5> -->
+                    <!-- <h6>Data: --/----</h6> -->
                     <div class="recurso-descricao">
                         <div> <!-- div importante para manter o float na imagem-->
                             <a href="">
                                 <img src="../assets/img/img-padrao.bmp" alt="Site Cálculo 2B (em andamento)">
                             </a>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis saepe provident mollitia? Tempora mollitia id libero maxime officia quae dolores nesciunt corrupti! Molestiae, non nulla accusantium fugit dignissimos facilis laborum?</p>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi quidem vel rerum, iste alias incidunt ea consequatur ex est, dolores autem, eaque harum. Eveniet alias dolorum tenetur deserunt! Delectus, odit. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus, aliquam id. Numquam provident ipsa esse voluptatibus pariatur, ex blanditiis soluta cumque sunt molestias veritatis repellendus sit? Fuga veritatis velit ea.</p>
+                            <p class="revisar">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis saepe provident mollitia? Tempora mollitia id libero maxime officia quae dolores nesciunt corrupti! Molestiae, non nulla accusantium fugit dignissimos facilis laborum?</p>
+                            <p class="revisar">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi quidem vel rerum, iste alias incidunt ea consequatur ex est, dolores autem, eaque harum. Eveniet alias dolorum tenetur deserunt! Delectus, odit. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatibus, aliquam id. Numquam provident ipsa esse voluptatibus pariatur, ex blanditiis soluta cumque sunt molestias veritatis repellendus sit? Fuga veritatis velit ea.</p>
                         </div>
                     </div>
                 </div> 
@@ -149,15 +149,15 @@
                 <div class="recurso-container">
 
                     <h3>Site Cálculo 3A (em andamento)</h3>
-                    <h5>Monitores:</h5>
-                    <h6>Data: --/----</h6>
+                    <!-- <h5>Monitores:</h5> -->
+                    <!-- <h6>Data: --/----</h6> -->
                     <div class="recurso-descricao">
                         <div> <!-- div importante para manter o float na imagem-->
                             <a href="">
                                 <img src="../assets/img/img-padrao.bmp" alt="Site Cálculo 3A (em andamento)">
                             </a>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis saepe provident mollitia? Tempora mollitia id libero maxime officia quae dolores nesciunt corrupti! Molestiae, non nulla accusantium fugit dignissimos facilis laborum?</p>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio expedita eligendi suscipit? Minima blanditiis quod ab nisi sunt quis sit vitae delectus, facere eveniet ratione assumenda deleniti laborum? Nam, delectus. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas dolore, alias aut dolores, eius reiciendis, modi laborum beatae nisi ipsam itaque est laboriosam a consectetur commodi blanditiis autem sint soluta?</p>
+                            <p class="revisar">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis saepe provident mollitia? Tempora mollitia id libero maxime officia quae dolores nesciunt corrupti! Molestiae, non nulla accusantium fugit dignissimos facilis laborum?</p>
+                            <p class="revisar">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio expedita eligendi suscipit? Minima blanditiis quod ab nisi sunt quis sit vitae delectus, facere eveniet ratione assumenda deleniti laborum? Nam, delectus. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quas dolore, alias aut dolores, eius reiciendis, modi laborum beatae nisi ipsam itaque est laboriosam a consectetur commodi blanditiis autem sint soluta?</p>
                         </div>
                     </div>
                 </div> 
