Adicionado dos os livros eletrônicos

--- a/pages/header-test.html
+++ b/pages/header-test.html
@@ -113,13 +113,13 @@
                         <button class="btn-barra">Livros Eletrônicos</button>
                     </a>        
                     <div class="menu-btn">
-                        <a href="https://redmatuff.github.io/site/pages/livros-eletronicos.html#calc-geogebra-v1">Calculo com Geobebra 3D vol. I</a>
-                        <a href="https://redmatuff.github.io/site/pages/livros-eletronicos.html#calc-geogebra-v2">Calculo com Geobebra 3D vol. II</a>
-                        <a href="https://redmatuff.github.io/site/pages/livros-eletronicos.html#geom-an-geogebra">Geometria Analítica com Geogebra</a>
-                        <a href="https://redmatuff.github.io/site/pages/livros-eletronicos.html#ap-calc-varias-var">Apostila Cálculo Diferencial de Várias Variáveis</a>
-                        <a href="https://redmatuff.github.io/site/pages/livros-eletronicos.html#site-calc-1a">Site Cálculo 1A (em andamento)</a>
-                        <a href="https://redmatuff.github.io/site/pages/livros-eletronicos.html#site-calc-2b">Site Cálculo 2B (em andamento)</a>
-                        <a href="https://redmatuff.github.io/site/pages/livros-eletronicos.html#site-calc-3a">Site Cálculo 3A (em andamento)</a>
+                        <a href="https://www.geogebra.org/m/hzvsftdf">Calculo com Geobebra 3D vol. I</a>
+                        <a href="https://www.geogebra.org/m/jke7hpfs">Calculo com Geobebra 3D vol. II</a>
+                        <a href="https://www.geogebra.org/m/wtmkn9nv">Geometria Analítica com Geogebra</a>
+                        <a href="https://redmatuff.github.io/calculovariasvariaveis/assets/pdf/apostila/apostila-completa.pdf">Apostila Cálculo Diferencial de Várias Variáveis</a>
+                        <a href="http://www.gma.uff.br/calculo1a/">Site Cálculo 1A </a>
+                        <a href="https://redmatuff.github.io/calculovariasvariaveis/">Site Cálculo 2B (em andamento)</a>
+                        <a href="http://www.gma.uff.br/calculo3a/">Site Cálculo 3A </a>
                     </div>
                 </div>
                 <!-- Fim do Botão 5 -->
