arquivos css especificados para sua área de atuação

--- a/pages/recursos.html
+++ b/pages/recursos.html
@@ -19,7 +19,7 @@
     <main>
 
         <section class="sobre">
-            <h1>Nossos Recursos Computacionais</h1>
+            <h1>Nossos Recursos <span style="overflow-wrap: break-word; hyphens: auto;">Computacionais</span></h1>
             <p class="revisar">
                 Os Recursos Computacionais REDMat são Applets e plataformas que utilizam tecnologia digital para oferecer suporte ao processo educacional. Esses recursos têm o objetivo de enriquecer a experiência de aprendizado, proporcionar maior acessibilidade, interatividade e flexibilidade aos estudantes. 
             </p>
