Alterações sugeridas pela Begoña, adição da apostila fgcv, mudança dos recursos da index para resem exibidos como lista em vez de imagem

--- a/pages/livros-eletronicos.html
+++ b/pages/livros-eletronicos.html
@@ -18,9 +18,10 @@
         
     <main>
 
-        <p class="comentario">Excluir esta página e linkar o menu para o index</p>
+
 
         <section class="sobre">
+            <p class="comentario" style="color: red; text-shadow: none;">Não sei se esta página vai continuar existindo. Se for, os links do menu do header deve direcionar para ela?<br><br>Colocar links nas imagens e títulos</p>
             <div class="apenas-desktop">
                 <h2>Importância dos Livros Eletrônicos</h2>
                 <p class="revisar">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid ipsam laudantium dolore culpa tempora? Quam quos quae magni soluta ab incidunt veniam, voluptatem hic corporis assumenda maiores atque labore consequuntur!</p>
@@ -92,6 +93,24 @@
             <section id="ap-calc-varias-var">
                 <div class="recurso-container">
                     <h3>Apostila Cálculo Diferencial de Várias Variáveis</h3>
+                    <!-- <h5>Monitores:</h5> -->
+                    <!-- <h6>Data: --/----</h6> -->
+                    <div class="recurso-descricao">
+                        <div> <!-- div importante para manter o float na imagem-->
+                            <a href="">
+                                <img src="../assets/img/img-padrao.bmp" alt="Apostila Cálculo Diferencial de Várias Variáveis">
+                            </a>
+                            <p class="revisar">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis saepe provident mollitia? Tempora mollitia id libero maxime officia quae dolores nesciunt corrupti! Molestiae, non nulla accusantium fugit dignissimos facilis laborum?</p>
+                            <p class="revisar">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam fugiat vitae corporis tenetur officia facilis quam alias quis, esse illo itaque provident unde. Ipsum numquam assumenda, facere debitis eum facilis. Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis dignissimos earum corrupti harum ratione totam consequatur beatae tempore at, aperiam officia minima animi aut quos veritatis blanditiis consectetur. Blanditiis, mollitia.</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <hr>
+
+            <section id="ap-fgcv">
+                <div class="recurso-container">
+                    <h3>Apostila FGCV</h3>
                     <!-- <h5>Monitores:</h5> -->
                     <!-- <h6>Data: --/----</h6> -->
                     <div class="recurso-descricao">
