--- a/pages/recursos.html
+++ b/pages/recursos.html
@@ -103,7 +103,7 @@
                                 <img src="../assets/icons/instagram.png" alt="logo do insta" class="logo">
                             </a>        
                             <p>Conteúdo para o Instagram sobre Teorema de Rolle e Teorema do Valor Médio</p>
-                            <p class="comentario">colocar link na ultima imagem?</p>
+                            <p class="comentario" style="position: absolute;">colocar link na ultima imagem?</p>
 
                             <p>
                                 <!-- Além disso, também foi desenolvido conteúdo informativo sobre o Teorema de Rolle e o Teorema do Valor Médio para ser compartilhado no Instagram. Nosso objetivo é facilitar o acesso ao conhecimento matemático, proporcionando oportunidade para os alunos aprenderem mesmo enquanto exploram suas redes sociais. -->
