remoção de erros

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 </a>
             </h2>
             <p>Os monitores REDMat atuaram ou atuam nos seguintes projetos de ensino do Instituto de Matemática e Estatística.</p>
-            <p class="comentario">colocar links nos itens</p>
+            <!-- <p class="comentario">colocar links nos itens</p> -->
 
             <ul>
                 <li>
@@ -168,7 +168,7 @@
 
             <p>Os monitores REDMat colaboraram na produção do seguinte material digital:</p>
             
-            <p class="comentario">colocar links nos itens</p>
+            <!-- <p class="comentario">colocar links nos itens</p> -->
 
             <ul>
 
