--- a/pages/recursos.html
+++ b/pages/recursos.html
@@ -124,9 +124,9 @@
                 <hr>
 
                 <div class="recurso-container">
-                    <!-- <h3>Título</h3>
-                    <h5>Monitores:</h5> -->
-                    <h6>Data: --/----</h6>
+                    <h3>Título</h3>
+                    <!-- <h5>Monitores:</h5> -->
+                    <!-- <h6>Data: --/----</h6> -->
                     
                     <div class="recurso-descricao">
                         <div> <!-- div importante para manter o float na imagem -->
@@ -181,8 +181,8 @@
                 <hr>
 
                 <div class="recurso-container">
-                    <!-- <h3>Título </h3>
-                    <h5>Monitores:</h5> -->
+                    <h3>Título </h3>
+                    <!-- <h5>Monitores:</h5> -->
                     <!-- <h6>Data: --/----</h6> -->
                     <div class="recurso-descricao">
                         <div>
