icone minimalista nos recursos do index, comentario no menu do header e em quem somos

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!-- Limpeza e organização do código -->
 <!-- Deixar o site mais leve reduzindo os tamanhos das imagens -->
-<!-- Adição de links externos, conteúco, e imagens -->
-<!-- colocar links externos nos recursos -->
+<!-- Adição de links externos, conteúdo, e imagens -->
+<!-- remover console.log dos JavaScripts -->
+<!-- Remover comentários inúteis e adicionar comentários importantes -->
 
 
 <!DOCTYPE html>
@@ -168,7 +169,7 @@
 
             <p>Os monitores REDMat colaboraram na produção do seguinte material digital:</p>
             
-            <!-- <p class="comentario">colocar links nos itens</p> -->
+            <p class="comentario">Alterar links nos itens caso a página de livros deixe de existir</p>
 
             <ul>
 
@@ -249,30 +250,30 @@
 
             <p>Os monitores REDMat colaboraram na produção do seguinte material digital:</p>
 
-            <p class="comentario">Fazer ícones mais minimalistas para esta área</p>
+            <!-- <p class="comentario">Fazer ícones mais minimalistas para esta área</p> -->
           
             <ul>
                 <li>
                     <a href="pages/recursos.html#func-uma-var">
-                        <img src="assets/img/func.png" alt="Funções de Uma Variável">
+                        <img src="assets/icons/icone-func.png" alt="Funções de Uma Variável">
                         <p>Funções de Uma Variável</p>
                     </a>
                 </li>
                 <li>
                     <a href="pages/recursos.html#func-uma-var">
-                        <img src="assets/img/calc1.png" alt="Funções de Uma Variável">
-                        <p>Cálculo de Funções de Uma Variáveis</p>
+                        <img src="assets/icons/icone-func.png" alt="Funções de Uma Variável">
+                        <p>Cálculo de Funções de Uma Variável</p>
                     </a>
                 </li>
                 <li>
                     <a href="pages/recursos.html#func-uma-var">
-                        <img src="assets/img/calc2.png" alt="Funções de Uma Variável">
+                        <img src="assets/icons/icone-func.png" alt="Funções de Uma Variável">
                         <p>Cálculo de Funções de Várias Variáveis</p>
                     </a>
                 </li>
                 <li>
                     <a href="pages/recursos.html#func-uma-var">
-                        <img src="assets/img/edo.png" alt="Funções de Uma Variável">
+                        <img src="assets/icons/icone-func.png" alt="Funções de Uma Variável">
                         <p>Equações Diferenciais Ordinárias</p>
                     </a>
                 </li>
