--- a/pages/quem-somos.html
+++ b/pages/quem-somos.html
@@ -26,25 +26,32 @@
         </section>
         <section class="content">
             <h2>História do projeto</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae magni nesciunt nulla commodi nisi, debitis totam, facere distinctio voluptas voluptatibus tempore possimus magnam similique. Iste, beatae placeat. Odio, quaerat accusamus!</p>
+            <p class="revisar">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae magni nesciunt nulla commodi nisi, debitis totam, facere distinctio voluptas voluptatibus tempore possimus magnam similique. Iste, beatae placeat. Odio, quaerat accusamus!</p>
             <hr>
             <h3>Equipes</h3>
-            <p>Texto sobre as equipes</p>
+            <p class="revisar">Texto sobre as equipes</p>
             <hr>
             <h4 id="eq2020">2020</h4>
-            <p>Comentário sobre a equipe e o que cada membro produziu</p>
+            <p class="revisar">Comentário sobre a equipe e o que cada membro produziu</p>
+
+
+            <p class="comentario">Link para gravação do encontro anual aqui?</p>
+            <p><br></p>
+            <a class="revisar" href=""> Encontro anual </a>
+
+
             <hr>
             <h4 id="eq2021">2021</h4>
-            <p>Comentário sobre a equipe e o que cada membro produziu</p>
+            <p class="revisar">Comentário sobre a equipe e o que cada membro produziu</p>
             <hr>
             <h4 id="eq2022">2022</h4>
-            <p>Comentário sobre a equipe e o que cada membro produziu</p>
+            <p class="revisar">Comentário sobre a equipe e o que cada membro produziu</p>
             <hr>
             <h4 id="eq2023">2023</h4>
-            <p>Comentário sobre a equipe e o que cada membro produziu</p>
+            <p class="revisar">Comentário sobre a equipe e o que cada membro produziu</p>
             <hr>
             <h4 id="eq2024">2024</h4>
-            <p>Comentário sobre a equipe e o que cada membro produziu</p>
+            <p class="revisar">Comentário sobre a equipe e o que cada membro produziu</p>
         </section>
     </main>
 
