Recursos e Projetos de Ensino atualizados

--- a/pages/proj-ensino.html
+++ b/pages/proj-ensino.html
@@ -61,16 +61,16 @@
             <section id="manim">
                 <div class="recurso-container">
                     <h3>Recursos Computacionais com Python (2023)</h3>
-                    <!-- <h5>Monitor: Gabriel Domingues</h5> -->
-                    <!-- <h6>Data: 2023</h6> -->
+                    <h5>Monitor: Gabriel Domingues</h5> 
+                     <h6>Data: 2023</h6>
                     <div class="recurso-descricao">
-                        <div> <!-- div importante para manter o float na imagem-->
-                            <p class="comentario">colocar link na imagem e no título</p>
+                        <div>
+                            
                             <a href="">
                                 <img src="../assets/img/python-logo.jpg" alt="Animação feita com Manim">
                            </a>
                            <p>Ao longo do ano, foi desenvolvido um projeto empregando Python e novas tecnologias com o intuito de explorar, de maneira lúdica, as propriedades das funções trigonométricas. A criação de vídeos visou facilitar e tornar mais atrativo o aprendizado desses conceitos matemáticos para os alunos. A abordagem adotada incluiu programação em Python, utilização de gráficos dinâmicos e recursos visuais para ilustrar as propriedades das funções trigonométricas </p>
-                            <p class="comentario" style="position: absolute;">Colocar nome do monitor, orientador e ano(? *já está no titulo) no texto.</p>
+                            <p class="comentario" style="position: absolute;">Quando os tutoriais de Manim estiverem pronto o link da playlist será colocado nessa imagem</p>
 
                             <!-- <p>Além disso, todo o conteúdo foi consolidado em um site interativo, oferecendo aos alunos a oportunidade de testar e aprimorar seus conhecimentos de forma prática. O site, parte integrante do projeto, proporciona uma experiência educacional dinâmica, promovendo o engajamento dos estudantes de maneira autônoma.</p>
                             <p>Este projeto não apenas demonstra a aplicação prática de Python e tecnologias modernas no ensino da matemática, mas também representa um esforço em transformar conceitos abstratos em experiências tangíveis e significativas para os alunos. Ao unir programação, visualização de dados e interatividade, buscamos redefinir a abordagem tradicional do ensino de trigonometria, tornando-o mais atraente e acessível. </p>
