--- a/pages/recursos.html
+++ b/pages/recursos.html
@@ -65,9 +65,9 @@
                 <hr>
                 <div class="recurso-container">
                     <h3>Propriedades de Funções Trigonométricas</h3>
-                    <p class="comentario">faltou colocar nome do monitor, orientador e ano nas descrições</p>
-                    <!-- <h5>Monitor: Gabriel Domingues</h5> -->
-                    <!-- <h6>Ano: 2023</h6> -->
+                    <h5>Monitor: Gabriel Domingues</h5>
+                    <h5> Orientador: Begoña Alarcon</h5>
+                    <h6>Ano: 2023</h6>
                     <div class="recurso-descricao">
                         <div> <!-- div importante para manter o float na imagem -->
 
